@@ -10,5 +10,6 @@ echo Foo::A."\n";
 --EXPECTF--
 Fatal error: Uncaught Error: Undefined constant self::B in %s:%d
 Stack trace:
-#0 {main}
+#0 %s(%d): [constant expression]()
+#1 {main}
   thrown in %sbug41633_2.php on line 3
