@@ -11,5 +11,6 @@ var_dump(A::FOO);
 --EXPECTF--
 Fatal error: Uncaught Error: Cannot declare self-referencing constant self::BAR in %s:%d
 Stack trace:
-#0 {main}
+#0 %s(%d): [constant expression]()
+#1 {main}
   thrown in %s on line %d
