@@ -12,5 +12,6 @@ Class constant whose initial value references a non-existent class
 --EXPECTF--
 Fatal error: Uncaught Error: Class "D" not found in %s:%d
 Stack trace:
-#0 {main}
+#0 %s(%d): [constant expression]()
+#1 {main}
   thrown in %s on line %d
